--- a/src/App.scss
+++ b/src/App.scss
@@ -1,34 +1,35 @@
 .App {
-  text-align: center;
-}
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+  .lives-left {
+    font-size: 50px;
   }
-}
-
-.App-header {
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: 2rem;
-  color: #282c34;
-}
-
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  .user-guess {
+    font-size: 50px;
+    
+    input {
+      height: 100px;
+      width: 120px;
+      font-size: 75px;
+      display: block;
+      margin: auto;
+    }
   }
-  to {
-    transform: rotate(360deg);
+
+  .confirm-guess {
+    font-size: 50px;
+
+    button {
+      width: 120px;
+      font-size: 30px;
+      display: block;
+      margin: auto;
+
+      &:hover {
+        cursor: pointer;
+        background-color: blue;
+        color: white;
+      }
+    }
   }
+
 }
