mvp and stretch goals achieved

--- a/src/App.scss
+++ b/src/App.scss
@@ -3,9 +3,11 @@
   .lives-left {
     font-size: 50px;
   }
-  .user-guess {
+
+  .numbers-guessed {
     font-size: 50px;
-    
+  }
+  .user-guess { 
     input {
       height: 100px;
       width: 120px;
